--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <img src="" />
       </div>
 
-      <div id="" class="node">
-        <img src="" />
+      <div id="teddy" class="node">
+        <a href="./kavin/kavin.html"><img src="./images/v.png" /></a>
       </div>
 
       <div id="Kavin" class="kavin">
