--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>帶你遊覽e地圖～</nav>
     <div class="map">
       <div id="rex" class="node">
-        <img src="./images/c.png" />
+        <a href="./rex/rex.html"><img src="./images/c.png" /></a>
       </div>
 
       <div id="" class="node">
