--- a/kavin/kavin.html
+++ b/kavin/kavin.html
@@ -5,6 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body></body>
+  <body>
+    <nav>帶你遊覽e地圖～</nav>
+    <div class="index">
+      <a href="/index.html"><img src="/images/v.png" /></a>
+    </div>
+    <div class="container">
+      <div class="row">
+        <h1 class="park">迪士尼</h1>
+        <p class="dis">
+          迪士尼主題樂園 家喻戶曉的快樂體驗 迪士尼主題樂園帶你進入夢幻的國度，
+          和摰親好友一起共度歡樂時光。
+        </p>
+        <p class="intro">
+          迪士尼主題樂園誕生至今已將近60年，設計了不少獨特創新的景點，包括讓來自世界各地的奇珍異品在賓客眼前活靈活現的神秘博物館－「迷離莊園」以及「幻想世界」、「反斗奇兵大本營」等主題園區，讓賓客體驗前所未有的奇妙樂趣！
+        </p>
+      </div>
+
+      <div class="pic">
+        <img
+          src="https://secure.cdn2.wdpromedia.com/resize/mwImage/1/720/405/90/wdpromedia.disney.go.com/media/wdpro-hkdl-assets/prod/zh-hk-intl/system/images/hkdl-visitor-tips-entrance.jpg"
+        />
+      </div>
+    </div>
+  </body>
 </html>
