--- a/index.html
+++ b/index.html
@@ -3,19 +3,31 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Kirby dream</title>
+    <title>MTR MAP</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
-    <nav>帶你遊覽e地圖～</nav>
+    <nav>
+      <div class="home-btn">
+        <a href="index.html"><i class="fa-solid fa-house fa-2xl"></i></a>
+      </div>
+      帶你遊覽e地圖～
+    </nav>
     <div class="map">
       <div id="rex" class="node">
         <a href="./rex/rex.html"><img src="./images/c.png" /></a>
       </div>
 
       <div id="teddy" class="node">
-        <a href="./kavin/kavin.html"><img src="./images/v.png" /></a>
+        <a href="./teddy/teddy.html"><img src="./images/m.png" /></a>
       </div>
 
       <div id="Kavin" class="kavin">
