--- a/kavin/kavin.html
+++ b/kavin/kavin.html
@@ -28,8 +28,8 @@
         />
       </div>
     </div>
-    <a href="/index.html"
-      ><img src="/images/v.png" />
+    <a href="../index.html"
+      ><img src="../images/v.png" />
       <p>Back to Home</p></a
     >
   </body>
