teddy's page finish

--- a/teddy/teddy.html
+++ b/teddy/teddy.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Lam Tin</title>
+    <title>Teddy's Page</title>
   </head>
 
   <body>
@@ -22,14 +22,26 @@
       </div>
       帶你遊覽e地圖～
     </nav>
-    <ul class="container">
+    <div class="container">
+      <div class="left-col">
+        <h1>藍田</h1>
+        <p>
+          藍田站（英語：Lam Tin
+          Station）是一個位於香港九龍觀塘區鯉魚門道以南晒草灣白泥山山坡，屬於港鐵觀塘綫的鐵路車站，其上蓋物業為滙景花園第9－17座。車站在1986年6月7日動工，卻未有在1989年8月6日隨東區海底隧道鐵路部份通車，直至同年10月1日正式啟用。
+        </p>
+      </div>
+      <div class="right-col">
+        <img src="../images/Lam_Tin_Station.jpeg" class="lam-tin" />
+      </div>
+
+      <!-- <ul class="container">
       <li class="left-col">
         <h2>藍田</h2>
-
       </li>
       <li class="right-col">
         <img src="../images/Lam_Tin_Station.jpeg" class="lam-tin">
-      </li>
+      </li> -->
     </div>
+    <img src="../images/m.png" class="kirby" />
   </body>
 </html>
